# popkorn-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  deploy.yml
app/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/comments/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/core/: celery_app.py  config.py  database.py  pubsub.py  redis.py  security.py
app/events/: router.py  schemas.py  service.py
app/movies/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 01459c6eb295_create_users_table.py  464da87bca99_create_comments_table.py  ebabf893ba3c_create_movies_table.py
nginx/: nginx.conf
tests/: test_health.py
