[project]
name = "popkorn-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi[standard]==0.115.0",
    "pydantic-settings==2.3.0",
    "sqlalchemy[asyncio]==2.0.31",
    "uvicorn[standard]==0.30.0",
]
