[project]
name = "popkorn-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg==0.29.0",
    "fastapi[standard]==0.115.0",
    "pydantic-settings==2.3.0",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]==2.0.31",
    "uvicorn[standard]==0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"